Fixing spacing issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,10 +8,21 @@ h1 {
 
 h5 {
   font-size: 2rem;
+  margin-left: -2.6%;
+  margin-bottom: 2.5%;
 }
 
 .adobeGaramondPro {
   font-family: "Adobe Garamond Pro";
+}
+
+.italics {
+  font-style: italic;
+}
+
+.media-object-section img {
+  padding-bottom: 5%;
+  margin-left: -2.6%;
 }
 
 #red {
